# fzy-example

./: Cargo.toml
src/: command_example.rs  commands.rs  git.rs  main.rs
