[package]
name = "fzy-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21.2", features = ["full"] }
dialoguer = { version = "0.10.2", features = ["fuzzy-matcher", "fuzzy-select"] }

[profile.dev]
opt-level = 0

[profile.release]
strip = true
opt-level = "s"
lto= true
codegen-units = 1
